fixes alignment for submenu items

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -144,4 +144,9 @@ li {
     .navigation-menu li a {
         padding: 0.5rem 0;
     }
+    #submenu{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
 }
